--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme 
 title: ⋆˚✿˖° Actividad 4 ⋆˚✿˖°
 description: Diana Garcia Escorcia. 
 Introduccion Ingenieria De Sistemas.
-NRC 4519
+NRC 4519 
