--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme 
+
 title: ⋆˚✿˖° Actividad 4 ⋆˚✿˖°
-description: Diana Garcia Escorcia. 
+description: [Diana Garcia Escorcia. 
 Introduccion Ingenieria De Sistemas.
-NRC 4519 
+NRC 4519]
+
+show_downloads:
+google_analytics:
+theme: jekyll-theme-cayman 
