--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: ⋆˚✿˖° Actividad 4 ⋆˚✿˖°
+title: [⋆˚✿˖° Actividad 4 ⋆˚✿˖°]
 description: [Diana Garcia Escorcia. 
 Introduccion Ingenieria De Sistemas.
 NRC 4519]
